function(add_example source)
    get_filename_component(name ${source} NAME_WE)
    add_executable(dingo_example_${name} ${source})
    target_link_libraries(dingo_example_${name} dingo)
    add_test(NAME dingo_example_${name} COMMAND dingo_example_${name})

    # Force-include windows.h to each example to make sure it builds with windows.h included
    target_compile_options(dingo_example_${name} PRIVATE $<$<CXX_COMPILER_ID:MSVC>:/FI windows.h /DNOMINMAX>)
endfunction()

add_example(allocator.cpp)
add_example(collection.cpp)
add_example(construct.cpp)
add_example(factory_callable.cpp)
add_example(factory_constructor.cpp)
add_example(factory_constructor_deduction.cpp)
add_example(factory_function.cpp)
add_example(index.cpp)
add_example(invoke.cpp)
add_example(message_processing.cpp)
add_example(multibindings.cpp)
add_example(nesting.cpp)
add_example(non_intrusive.cpp)
add_example(quick.cpp)
add_example(scope_external.cpp)
add_example(scope_shared.cpp)
add_example(scope_shared_cyclical.cpp)
add_example(scope_unique.cpp)
add_example(service_locator.cpp)
