function(add_example source)
    get_filename_component(name ${source} NAME_WE)
    add_executable(dingo_example_${name} ${source})
    target_link_libraries(dingo_example_${name} dingo)
    add_test(NAME dingo_example_${name} COMMAND $<TARGET_FILE:dingo_example_${name}>)

    # Force-include windows.h to each example to make sure it builds with windows.h included
    target_compile_options(dingo_example_${name} PRIVATE $<$<CXX_COMPILER_ID:MSVC>:/FI windows.h /DNOMINMAX>)
endfunction()

add_example(container/allocator.cpp)
add_example(container/construct.cpp)
add_example(container/invoke.cpp)
add_example(container/nesting.cpp)
add_example(container/quick.cpp)
add_example(container/service_locator.cpp)
add_example(factory/factory_callable.cpp)
add_example(factory/factory_constructor.cpp)
add_example(factory/factory_constructor_deduction.cpp)
add_example(factory/factory_function.cpp)
add_example(index/index.cpp)
add_example(index/message_processing.cpp)
add_example(index/multibindings.cpp)
add_example(registration/collection.cpp)
add_example(registration/non_intrusive.cpp)
add_example(storage/array.cpp)
add_example(storage/scope_external.cpp)
add_example(storage/scope_shared.cpp)
add_example(storage/scope_shared_cyclical.cpp)
add_example(storage/scope_unique.cpp)
add_example(container/variant.cpp)
