function(add_example source)
    string(REGEX REPLACE "\\.[^.]*$" "" name "${source}")
    string(REPLACE "/" "_" name "${name}")
    set(target dingo_example_${name})

    add_executable(${target} ${source})
    set_property(GLOBAL APPEND PROPERTY DINGO_EXAMPLE_TARGETS ${target})
    set_property(GLOBAL APPEND PROPERTY DINGO_EXAMPLE_SOURCES
        "${CMAKE_CURRENT_SOURCE_DIR}/${source}")
    target_link_libraries(${target} dingo)
    add_test(NAME ${target} COMMAND $<TARGET_FILE:${target}>)

    # Force-include windows.h to each example to make sure it builds with windows.h included
    target_compile_options(${target} PRIVATE $<$<CXX_COMPILER_ID:MSVC>:/FI windows.h /DNOMINMAX>)
endfunction()

add_example(container/allocator.cpp)
add_example(container/construct.cpp)
add_example(container/invoke.cpp)
add_example(container/nesting.cpp)
add_example(container/quick_runtime.cpp)
add_example(container/quick_static.cpp)
add_example(container/service_locator.cpp)
add_example(factory/factory_callable.cpp)
add_example(factory/factory_constructor.cpp)
add_example(factory/factory_constructor_deduction.cpp)
add_example(factory/factory_function.cpp)
add_example(index/index.cpp)
add_example(index/message_processing.cpp)
add_example(index/multibindings.cpp)
add_example(registration/collection.cpp)
add_example(registration/annotated.cpp)
add_example(registration/compile_time_registration.cpp)
add_example(registration/non_intrusive.cpp)
add_example(registration/runtime_registration.cpp)
add_example(storage/array.cpp)
add_example(storage/scope_external.cpp)
add_example(storage/scope_shared.cpp)
add_example(storage/scope_shared_cyclical.cpp)
add_example(storage/scope_unique.cpp)
add_example(container/variant.cpp)
